--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ input{
     padding: 8px 16px;
     background-color: #007BFF;
     border: none;
-    
+    color: #fff;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
